exports[`(.not).toHaveGoneStatus > using axios > .not.toHaveGoneStatus > fails when response have status code 410 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveGoneStatus()</intensity>

Expected status code to not be 410 received:
  <red>410</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 410,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveGoneStatus > using axios > .toHaveGoneStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveGoneStatus()</intensity>

Expected status code to be 410 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveGoneStatus > using got > .not.toHaveGoneStatus > fails when response have status code 410 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveGoneStatus()</intensity>

Expected status code to not be 410 received:
  <red>410</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 410,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHaveGoneStatus > using got > .toHaveGoneStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveGoneStatus()</intensity>

Expected status code to be 410 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
